# Warlock-Engine-CMake

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md
Editor/: CMakeLists.txt
Editor/src/: EditorApp.cpp
Warlock/: CMakeLists.txt
Warlock/src/: Warlock.h  WarlockPCH.cpp  WarlockPCH.hpp
